syntax = "proto3";
package KleverTechnicalChallenge;

import "google/protobuf/empty.proto";

option go_package = "./controllers/comment_controller";

service CommentController {
  rpc GetAllComments(google.protobuf.Empty) returns (stream GetCommentDTO) {}
  rpc CreateComment(CreateCommentDTO) returns (google.protobuf.Empty) {}
}

message GetCommentDTO {
  string id = 1;
  string message = 2;
}

message CreateCommentDTO {
  string message = 1;
}