syntax = "proto3";
package KleverTechnicalChallenge;

import "google/protobuf/empty.proto";

option go_package = "./controllers/upvote_controller";

service UpvoteController {
  rpc GetUpvoteById(IdDTO) returns (GetUpvoteDTO) {}
  rpc GetUpvotesByCommentId(IdDTO) returns (stream GetUpvoteDTO) {}
  rpc CreateUpvote(CreateUpvoteDTO) returns (google.protobuf.Empty) {}
  rpc DeleteUpvote(IdDTO) returns (google.protobuf.Empty) {}
}

enum Type {
    upvote = 0;
    downvote = 1;
}

message IdDTO {
    string id = 1;
}

message GetUpvoteDTO {
  string id = 1;
  string createdAt = 2;
  string type = 3;
  string commentId = 4;
}

message CreateUpvoteDTO {
  Type type = 1;
  string commentId = 2;
}